# gen2-energihash

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  egihash.cpp  egihash.h  keccak-tiny.c  main.cpp
data/: .gitignore  ethash_eg_seed_2_hashes.dag  hashcache_256.csv  hashcache_512.csv  headerhash_test_vectors.csv
include/: Makefile.am  egihash.h  nrghash.h
libegihash/: Makefile.am  egihash.cpp  keccak-tiny.c
libnrghash/: Makefile.am
test/: .gitignore  Makefile.am  egihash_test.cpp  nrghash_test.cpp  test.cpp
